fix SettingLanguageSelect.vue scrollbar

--- a/src/renderer/assets/css/index.css
+++ b/src/renderer/assets/css/index.css
@@ -307,8 +307,9 @@
 } 
 
 /* 04 */
-/* .dropdown-content {
-  background-color: #fff; 
+.dropdown-content {
+  background-color: #fff;
+  max-height: 3000%; 
   margin: 0;
   display: none;
   min-width: 100px;
@@ -319,9 +320,7 @@
   top: 0;
   z-index: 9999;
   transform-origin: 0 0;
-} */
-
-
+}
 
 /* 05 invoice */
 /* .desc[data-v-02c64a2c] {
